Mon Sep 18 17:19:32 BST 2000 Olly Betts

	* Efficiency tweak to max_or_terms comparator - don't call
	  get_maxweight() if get_termfreq() is zero.

	* More minor rearrangments in preparation for merging LocalMatch and
	  MultiMatch.

Mon Sep 18 15:43:46 BST 2000 Olly Betts

	* A testsuite programs asked to run test "foo" will now run tests
	  "foo1", "foo2", ... if they exist.

Mon Sep 18 14:36:13 BST 2000 Olly Betts

	* Implemented API side of OmDatabase::positionlist_{begin,end} -
	  still needs support in backends.
 
Mon Sep 18 14:03:58 BST 2000 Olly Betts

	* Sorted out wrinkles with geacinclude.sh.

Mon Sep 18 13:02:36 BST 2000 Olly Betts

	* Added tests for skip_to on {Post,Term}ListIterator.

Mon Sep 18 12:59:39 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Keep a count of the skipped tests.

Mon Sep 18 12:31:05 BST 2000 Olly Betts

	* acinclude.m4 generation moved from buildall to a separate script
	  so that the Makefile can regenerate acinclude.m4 if necessary.

	* Use AC_CONFIG_AUX_DIR to reduce the clutter in the top level
	  directory.

Mon Sep 18 12:26:48 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Tests in the testsuite can now be skipped, and avoid being
	  counted as either a pass or a fail.
	
	* Leak detection code partly separated out.

Mon Sep 18 11:55:53 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* malloccheck now includes a naive memory allocation function to
	  use before malloc() and friends are found.  This removes the
	  gross dependency on glibc2 internals.

Mon Sep 18 10:57:16 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added malloccheck.c to the distribution.

Fri Sep 15 19:02:48 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added an LD_PRELOADable library to do some malloc() etc checking.
	  (Currently doesn't yet do leak checking, but does the accounting.)
	  May not work on non-glibc2 systems.

	* Simplified omerr_tostring so that it uses OmError::get_type().
